[package]
name = "axum_bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = "0.5.17"
http = "0.2.9"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["limit", "load-shed", "timeout"] }
